# MAGNATRIX-OS

./: .dockerignore  .env.example  .gitignore  .task_brief_untouched_domains_1.md  .task_brief_untouched_domains_2.md  .task_brief_untouched_domains_3.md  .tmp_mod16_replication_guard.md  .tmp_mod19_hyperpredict.md  .tmp_mod3_world_sim.md  .tmp_mod8_episodic.md  .tmp_phase2_brief.md  .tmp_user_upload  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  PRODUCTION_REPORT.json  README.md  RedPlanetHQ_Integration_Brief.md  SECURITY_AUDIT.md  agent_memory.json  audit_report.json  curriculum_progress.json  db_btree.json  docker-compose.yml  domain_gap_analysis.md  freellm_models.json  freellm_providers.json  install.bat  install.ps1  install.sh  llm_3d_print_material_native.py  llm_acoustic_designer_native.py  llm_active_learning_native.py  llm_actuarial_modeler_native.py  llm_actuarial_table_native.py  llm_adapter_pattern_native.py  llm_adhesive_bond_strength_native.py  (+746 more)
.governance/: audit.jsonl
ai/: __init__.py  affective_native.py  agent_context_native.py  agent_gpt_native.py  agentic_router_native.py  auto_code_native.py  auto_llm_native.py  autonomous_agent_native.py  autonomous_task_loop_native.py  bci_native.py  causal_reasoning_native.py  cognitive_architecture_native.py  counterfactual_native.py  deep_research_native.py  ethical_reasoning_native.py  expert_system_native.py  gguf_llama_bridge_native.py  gguf_loader_native.py  goal_alignment_native.py  hermes_agentic_native.py  hf_integration_native.py  hierarchical_agent_native.py  hyperpredict_native.py  llm_a_b_testing_native.py  llm_ab_testing_native.py  llm_access_control_native.py  llm_access_controller_native.py  llm_act_halting_native.py  llm_activation_functions_native.py  llm_actuator_driver_native.py  llm_adapter_factory_native.py  llm_adaptive_learning_native.py  llm_adaptive_temperature_native.py  llm_adc_converter_native.py  llm_adversarial_tester_native.py  llm_agent_based_modeler_native.py  llm_agent_coordinator_native.py  llm_agent_memory_native.py  llm_agent_orchestrator_native.py  llm_agent_team_orchestrator_native.py  (+666 more)
api/: arena_api_native.py
api-gateway/: api_server.py  gateway_server.py
api-router/: api_router_native.py  hostinger_deploy.py
api_gateway/: __init__.py  api_server.py  gateway_native.py  gateway_v2_native.py  openapi.yaml
api_router/: __init__.py  api_router_native.py  free_llm_router.py  gateway_native.py  hostinger_deploy.py  intelligent_router_native.py  oneapi_bridge.py  oneapi_native_manager.py  openclaude_bridge.py  openclaude_native_router.py
auto_repo_hunter/: native_generator_native.py  pattern_extractor_native.py  repo_hunter_native.py  repo_miner_native.py  self_improvement_loop.py  test_repo_hunter.py
benchmarks/: __init__.py  comprehensive_benchmarks.py
blockchain/: blockchain_native.py  cbdc_native.py  consensus_native.py  cross_border_native.py  flow_agent_native.py  idrx_native.py  pharos_agent_native.py  qrbi_native.py  rwa_indonesia_native.py  solana_agent_native.py  sovereign_token_native.py  syariah_finance_native.py  token_engine_native.py  web3_native.py
blueprints/: BLUEPRINT-AgenticOS-Android.md  Blueprint MAGNATRIX Agentic OS - Master Unified.md  LAYER 13 — Offensive Security.md  MAGNATRIX Agentic OS - Arsitektur 10 Layer.md  MAGNATRIX Agentic OS - Master Blueprint Final v1.1.md  MAGNATRIX Agentic OS - Master Blueprint Final v1.2.md  MAGNATRIX Agentic OS - Master Blueprint Final.md  MAGNATRIX Hermes Brain Architecture.md  MAGNATRIX Hybrid - Local + Cloud Architecture.md  MAGNATRIX Layer 1.5 API Router + Repo Map.md  MAGNATRIX Layer IDE - Cross Platform App Builder.md  MAGNATRIX Private - Super AI Architecture.md  MAGNATRIX-Agentic-OS-Blueprint-Kimi.md
browser/: __init__.py  browser_automation_native.py  browser_engine_native.py  browser_layer.py  browser_native.py  web_automation_v2_native.py
browser-ext/: __init__.py  background.js  content.js  manifest.json
browser_ext/: browser_ext_native.py
chat-bridge/: __init__.py  chat_client.py  chat_server.py
chat_bridge/: chat_bridge_native.py
cli/: __init__.py  cli_native.py  magnatrix_cli.py  magnatrix_cli_native.py
cognition/: thinking_engine_native.py
collective-brain/: __init__.py  ai_agents_500_native.py  anthropic_sdk_native.py  bitterbot_native.py  cognitive_load_analyzer.py  gbrain_native.py  hermes_war_room_native.py
collective_brain/: autoagent_native.py  cross_domain.py  hermes_llm_bridge.py  livekit_agents_native.py  meta_learning.py  recursive_v2.py  swarm_orchestrator.py
config/: config_schema_native.py  magnatrix.yaml  magnatrix_config.py
consensus/: __init__.py  raft_native.py
constitutional/: __init__.py  constitutional_ai_native.py
core/: adaptive_harness_native.py  advanced_rag_pipeline_native.py  adversarial_input_scanner_native.py  adversarial_verification_engine_native.py  aerospace_flight_control_native.py  agent_attribution_native.py  agent_comm_taxonomy_native.py  agent_connector_native.py  agent_critique_analyzer_native.py  agent_evolution_engine_native.py  agent_harness_native.py  agent_hook_manager_native.py  agent_memory_store_native.py  agent_memory_system_native.py  agent_messaging_native.py  agent_native_memory_native.py  agent_orchestrator_native.py  agent_plugin_marketplace_native.py  agent_router_native.py  agent_skills_library_native.py  agent_workflow_builder_native.py  agentic_benchmark_native.py  agentic_tool_registry_native.py  agents_adk_builder_native.py  agents_deploy_native.py  agents_eval_native.py  agents_model_selector_native.py  agents_observability_native.py  agents_publish_native.py  (+627 more)
security/rust_crypto_engine/: Cargo.toml  __init__.py  crypto_py.py
security/rust_crypto_engine/src/: lib.rs
trading/cpp_hft_engine/: CMakeLists.txt  __init__.py  hft_engine_py.py
trading/cpp_hft_engine/include/: arbitrage_detector.h  hft_engine.h  market_data.h  order_book.h
trading/cpp_hft_engine/src/: arbitrage_detector.cpp  bindings.cpp  hft_engine.cpp  order_book.cpp
trading/cpp_hft_engine/tests/: test_order_book.cpp
(+1191 files in other folders)
